src/oqd_core/frontend/atomic/_generated/AtomicParser.py
# Generated from AtomicParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class AtomicParser ( Parser ):

    grammarFileName = "AtomicParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'parallel'", "'serial'", "'if'", "'else'", 
                     "'while'", "'with'", "'for'", "'break'", "'continue'", 
                     "'ionreg'", "'beam'", "'pulse'", "'and'", "'&&'", "'or'", 
                     "'||'", "'not'", "'!'", "'true'", "'false'", "':'", 
                     "';'", "','", "'('", "')'", "'['", "']'", "'{'", "'}'", 
                     "'*'", "'/'", "'+'", "'-'", "'^'", "'='", "'=='", "'!='", 
                     "'<'", "'<='", "'>'", "'>='", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'1j'", "'abs'", "'sin'", "'cos'", "'tan'", 
                     "'exp'", "'log'", "'sinh'", "'cosh'", "'tanh'", "'atan'", 
                     "'acos'", "'asin'", "'atanh'", "'asinh'", "'acosh'", 
                     "'heaviside'", "'conj'", "'real'", "'imag'", "'atan2'" ]

    symbolicNames = [ "<INVALID>", "WHITESPACE", "EOL", "NEWLINE", "COMMENT", 
                      "PARALLEL", "SERIAL", "IF", "ELSE", "WHILE", "WITH", 
                      "FOR", "BREAK", "CONTINUE", "IONREGISTER", "BEAM", 
                      "PULSE", "AND", "AND2", "OR", "OR2", "NOT", "NOT2", 
                      "TRUE", "FALSE", "COLON", "SEMICOLON", "COMMA", "LBRACKET", 
                      "RBRACKET", "SQUARELBRACKET", "SQUARERBRACKET", "LBRACE", 
                      "RBRACE", "MULT", "DIV", "PLUS", "MINUS", "POWER", 
                      "ASSIGN", "EQ", "NEQ", "LT", "LTE", "GT", "GTE", "INT", 
                      "FLOAT", "MATH_VAR", "IMAG", "ABS", "SIN", "COS", 
                      "TAN", "EXP", "LOG", "SINH", "COSH", "TANH", "ATAN", 
                      "ACOS", "ASIN", "ATANH", "ASINH", "ACOSH", "HEAVISIDE", 
                      "CONJ", "REAL", "IMAG_FN", "ATAN2", "ID" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_block = 2
    RULE_terminal = 3
    RULE_expr = 4
    RULE_cond = 5
    RULE_atomic_list = 6
    RULE_declaration = 7
    RULE_access = 8
    RULE_atomic_list_extract = 9
    RULE_break_stmt = 10
    RULE_continue_stmt = 11
    RULE_while_stmt = 12
    RULE_ifelse_stmt = 13
    RULE_ion_register = 14
    RULE_parallel_stmt = 15
    RULE_serial_stmt = 16
    RULE_targets = 17
    RULE_bool_and_op = 18
    RULE_bool_or_op = 19
    RULE_bool_not_op = 20
    RULE_bool_eq_op = 21
    RULE_bool_not_eq_op = 22
    RULE_bool_lt_op = 23
    RULE_bool_lte_op = 24
    RULE_bool_gt_op = 25
    RULE_bool_gte_op = 26
    RULE_bool_literal = 27
    RULE_comparators = 28
    RULE_math_terminal = 29
    RULE_func_names = 30
    RULE_pexpr = 31
    RULE_fexpr = 32
    RULE_aexpr = 33
    RULE_mexpr = 34
    RULE_uexpr = 35
    RULE_eexpr = 36

    ruleNames =  [ "program", "statement", "block", "terminal", "expr", 
                   "cond", "atomic_list", "declaration", "access", "atomic_list_extract", 
                   "break_stmt", "continue_stmt", "while_stmt", "ifelse_stmt", 
                   "ion_register", "parallel_stmt", "serial_stmt", "targets", 
                   "bool_and_op", "bool_or_op", "bool_not_op", "bool_eq_op", 
                   "bool_not_eq_op", "bool_lt_op", "bool_lte_op", "bool_gt_op", 
                   "bool_gte_op", "bool_literal", "comparators", "math_terminal", 
                   "func_names", "pexpr", "fexpr", "aexpr", "mexpr", "uexpr", 
                   "eexpr" ]

    EOF = Token.EOF
    WHITESPACE=1
    EOL=2
    NEWLINE=3
    COMMENT=4
    PARALLEL=5
    SERIAL=6
    IF=7
    ELSE=8
    WHILE=9
    WITH=10
    FOR=11
    BREAK=12
    CONTINUE=13
    IONREGISTER=14
    BEAM=15
    PULSE=16
    AND=17
    AND2=18
    OR=19
    OR2=20
    NOT=21
    NOT2=22
    TRUE=23
    FALSE=24
    COLON=25
    SEMICOLON=26
    COMMA=27
    LBRACKET=28
    RBRACKET=29
    SQUARELBRACKET=30
    SQUARERBRACKET=31
    LBRACE=32
    RBRACE=33
    MULT=34
    DIV=35
    PLUS=36
    MINUS=37
    POWER=38
    ASSIGN=39
    EQ=40
    NEQ=41
    LT=42
    LTE=43
    GT=44
    GTE=45
    INT=46
    FLOAT=47
    MATH_VAR=48
    IMAG=49
    ABS=50
    SIN=51
    COS=52
    TAN=53
    EXP=54
    LOG=55
    SINH=56
    COSH=57
    TANH=58
    ATAN=59
    ACOS=60
    ASIN=61
    ATANH=62
    ASINH=63
    ACOSH=64
    HEAVISIDE=65
    CONJ=66
    REAL=67
    IMAG_FN=68
    ATAN2=69
    ID=70

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block(self):
            return self.getTypedRuleContext(AtomicParser.BlockContext,0)


        def EOF(self):
            return self.getToken(AtomicParser.EOF, 0)

        def getRuleIndex(self):
            return AtomicParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = AtomicParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.block()
            self.state = 75
            self.match(AtomicParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaration(self):
            return self.getTypedRuleContext(AtomicParser.DeclarationContext,0)


        def parallel_stmt(self):
            return self.getTypedRuleContext(AtomicParser.Parallel_stmtContext,0)


        def serial_stmt(self):
            return self.getTypedRuleContext(AtomicParser.Serial_stmtContext,0)


        def while_stmt(self):
            return self.getTypedRuleContext(AtomicParser.While_stmtContext,0)


        def ifelse_stmt(self):
            return self.getTypedRuleContext(AtomicParser.Ifelse_stmtContext,0)


        def break_stmt(self):
            return self.getTypedRuleContext(AtomicParser.Break_stmtContext,0)


        def continue_stmt(self):
            return self.getTypedRuleContext(AtomicParser.Continue_stmtContext,0)


        def expr(self):
            return self.getTypedRuleContext(AtomicParser.ExprContext,0)


        def getRuleIndex(self):
            return AtomicParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = AtomicParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 85
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 77
                self.declaration()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 78
                self.parallel_stmt()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 79
                self.serial_stmt()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 80
                self.while_stmt()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 81
                self.ifelse_stmt()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 82
                self.break_stmt()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 83
                self.continue_stmt()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 84
                self.expr(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AtomicParser.StatementContext)
            else:
                return self.getTypedRuleContext(AtomicParser.StatementContext,i)


        def EOL(self, i:int=None):
            if i is None:
                return self.getTokens(AtomicParser.EOL)
            else:
                return self.getToken(AtomicParser.EOL, i)

        def getRuleIndex(self):
            return AtomicParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = AtomicParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 91
                    self._errHandler.sync(self)
                    token = self._input.LA(1)
                    if token in [5, 6, 7, 9, 12, 13, 14, 15, 16, 21, 22, 23, 24, 28, 30, 36, 37, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70]:
                        self.state = 87
                        self.statement()
                        self.state = 88
                        self.match(AtomicParser.EOL)
                        pass
                    elif token in [2]:
                        self.state = 90
                        self.match(AtomicParser.EOL)
                        pass
                    else:
                        raise NoViableAltException(self)
             
                self.state = 95
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

            self.state = 97
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & -70161211985184) != 0) or ((((_la - 64)) & ~0x3f) == 0 and ((1 << (_la - 64)) & 127) != 0):
                self.state = 96
                self.statement()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TerminalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ion_register(self):
            return self.getTypedRuleContext(AtomicParser.Ion_registerContext,0)


        def atomic_list_extract(self):
            return self.getTypedRuleContext(AtomicParser.Atomic_list_extractContext,0)


        def math_terminal(self):
            return self.getTypedRuleContext(AtomicParser.Math_terminalContext,0)


        def bool_literal(self):
            return self.getTypedRuleContext(AtomicParser.Bool_literalContext,0)


        def atomic_list(self):
            return self.getTypedRuleContext(AtomicParser.Atomic_listContext,0)


        def getRuleIndex(self):
            return AtomicParser.RULE_terminal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTerminal" ):
                listener.enterTerminal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTerminal" ):
                listener.exitTerminal(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTerminal" ):
                return visitor.visitTerminal(self)
            else:
                return visitor.visitChildren(self)




    def terminal(self):

        localctx = AtomicParser.TerminalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_terminal)
        try:
            self.state = 104
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 99
                self.ion_register()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 100
                self.atomic_list_extract()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 101
                self.math_terminal()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 102
                self.bool_literal()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 103
                self.atomic_list()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def aexpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AtomicParser.AexprContext)
            else:
                return self.getTypedRuleContext(AtomicParser.AexprContext,i)


        def comparators(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AtomicParser.ComparatorsContext)
            else:
                return self.getTypedRuleContext(AtomicParser.ComparatorsContext,i)


        def bool_not_op(self):
            return self.getTypedRuleContext(AtomicParser.Bool_not_opContext,0)


        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AtomicParser.ExprContext)
            else:
                return self.getTypedRuleContext(AtomicParser.ExprContext,i)


        def LBRACKET(self):
            return self.getToken(AtomicParser.LBRACKET, 0)

        def RBRACKET(self):
            return self.getToken(AtomicParser.RBRACKET, 0)

        def atomic_list(self):
            return self.getTypedRuleContext(AtomicParser.Atomic_listContext,0)


        def terminal(self):
            return self.getTypedRuleContext(AtomicParser.TerminalContext,0)


        def bool_and_op(self):
            return self.getTypedRuleContext(AtomicParser.Bool_and_opContext,0)


        def bool_or_op(self):
            return self.getTypedRuleContext(AtomicParser.Bool_or_opContext,0)


        def getRuleIndex(self):
            return AtomicParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = AtomicParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 8
        self.enterRecursionRule(localctx, 8, self.RULE_expr, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 107
                self.aexpr(0)
                self.state = 111 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 108
                        self.comparators()
                        self.state = 109
                        self.aexpr(0)

                    else:
                        raise NoViableAltException(self)
                    self.state = 113 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

                pass

            elif la_ == 2:
                self.state = 115
                self.bool_not_op()
                self.state = 116
                self.expr(5)
                pass

            elif la_ == 3:
                self.state = 118
                self.match(AtomicParser.LBRACKET)
                self.state = 119
                self.expr(0)
                self.state = 120
                self.match(AtomicParser.RBRACKET)
                pass

            elif la_ == 4:
                self.state = 122
                self.atomic_list()
                pass

            elif la_ == 5:
                self.state = 123
                self.terminal()
                pass

            elif la_ == 6:
                self.state = 124
                self.aexpr(0)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 136
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = AtomicParser.ExprContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                    self.state = 127
                    if not self.precpred(self._ctx, 6):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 6)")
                    self.state = 130
                    self._errHandler.sync(self)
                    token = self._input.LA(1)
                    if token in [17, 18]:
                        self.state = 128
                        self.bool_and_op()
                        pass
                    elif token in [19, 20]:
                        self.state = 129
                        self.bool_or_op()
                        pass
                    else:
                        raise NoViableAltException(self)

                    self.state = 132
                    self.expr(7) 
                self.state = 138
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class CondContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(AtomicParser.ExprContext,0)


        def getRuleIndex(self):
            return AtomicParser.RULE_cond

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCond" ):
                listener.enterCond(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCond" ):
                listener.exitCond(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCond" ):
                return visitor.visitCond(self)
            else:
                return visitor.visitChildren(self)




    def cond(self):

        localctx = AtomicParser.CondContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_cond)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Atomic_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SQUARELBRACKET(self):
            return self.getToken(AtomicParser.SQUARELBRACKET, 0)

        def SQUARERBRACKET(self):
            return self.getToken(AtomicParser.SQUARERBRACKET, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AtomicParser.ExprContext)
            else:
                return self.getTypedRuleContext(AtomicParser.ExprContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(AtomicParser.COMMA)
            else:
                return self.getToken(AtomicParser.COMMA, i)

        def getRuleIndex(self):
            return AtomicParser.RULE_atomic_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtomic_list" ):
                listener.enterAtomic_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtomic_list" ):
                listener.exitAtomic_list(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAtomic_list" ):
                return visitor.visitAtomic_list(self)
            else:
                return visitor.visitChildren(self)




    def atomic_list(self):

        localctx = AtomicParser.Atomic_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_atomic_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self.match(AtomicParser.SQUARELBRACKET)
            self.state = 143
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if ((((_la - 14)) & ~0x3f) == 0 and ((1 << (_la - 14)) & 144115183793555335) != 0):
                self.state = 142
                self.expr(0)


            self.state = 149
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==27:
                self.state = 145
                self.match(AtomicParser.COMMA)
                self.state = 146
                self.expr(0)
                self.state = 151
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 152
            self.match(AtomicParser.SQUARERBRACKET)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(AtomicParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(AtomicParser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(AtomicParser.ExprContext,0)


        def getRuleIndex(self):
            return AtomicParser.RULE_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration" ):
                return visitor.visitDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def declaration(self):

        localctx = AtomicParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 154
            self.match(AtomicParser.ID)
            self.state = 155
            self.match(AtomicParser.ASSIGN)
            self.state = 156
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AccessContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(AtomicParser.ID, 0)

        def getRuleIndex(self):
            return AtomicParser.RULE_access

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAccess" ):
                listener.enterAccess(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAccess" ):
                listener.exitAccess(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAccess" ):
                return visitor.visitAccess(self)
            else:
                return visitor.visitChildren(self)




    def access(self):

        localctx = AtomicParser.AccessContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_access)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 158
            self.match(AtomicParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Atomic_list_extractContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def access(self):
            return self.getTypedRuleContext(AtomicParser.AccessContext,0)


        def SQUARELBRACKET(self):
            return self.getToken(AtomicParser.SQUARELBRACKET, 0)

        def INT(self):
            return self.getToken(AtomicParser.INT, 0)

        def SQUARERBRACKET(self):
            return self.getToken(AtomicParser.SQUARERBRACKET, 0)

        def getRuleIndex(self):
            return AtomicParser.RULE_atomic_list_extract

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtomic_list_extract" ):
                listener.enterAtomic_list_extract(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtomic_list_extract" ):
                listener.exitAtomic_list_extract(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAtomic_list_extract" ):
                return visitor.visitAtomic_list_extract(self)
            else:
                return visitor.visitChildren(self)




    def atomic_list_extract(self):

        localctx = AtomicParser.Atomic_list_extractContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_atomic_list_extract)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 160
            self.access()
            self.state = 161
            self.match(AtomicParser.SQUARELBRACKET)
            self.state = 162
            self.match(AtomicParser.INT)
            self.state = 163
            self.match(AtomicParser.SQUARERBRACKET)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Break_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BREAK(self):
            return self.getToken(AtomicParser.BREAK, 0)

        def getRuleIndex(self):
            return AtomicParser.RULE_break_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBreak_stmt" ):
                listener.enterBreak_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBreak_stmt" ):
                listener.exitBreak_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBreak_stmt" ):
                return visitor.visitBreak_stmt(self)
            else:
                return visitor.visitChildren(self)




    def break_stmt(self):

        localctx = AtomicParser.Break_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_break_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 165
            self.match(AtomicParser.BREAK)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Continue_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONTINUE(self):
            return self.getToken(AtomicParser.CONTINUE, 0)

        def getRuleIndex(self):
            return AtomicParser.RULE_continue_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterContinue_stmt" ):
                listener.enterContinue_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitContinue_stmt" ):
                listener.exitContinue_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitContinue_stmt" ):
                return visitor.visitContinue_stmt(self)
            else:
                return visitor.visitChildren(self)




    def continue_stmt(self):
